# Sewayaki-bot-no-Aruya-chan

./: cfg.ini  cfg.py  default_cfg.py  keep_me_alive.py  main.py  pyproject.toml
art/: urls.txt
cogs/: answers.py  config.py  danbooru.py  help.py  info.py  modo.py
