[tool.poetry]
name = "sewayaki-bot-no-aruya-chan-1"
version = "0.1.0"
description = "multipurpose discord bot"
authors = ["Wyzero", "jery03"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
replit = "^2.0.0"
"discord.py" = "^1.6.0"
discord-ext-menus = "^1.0"
pybooru = "^4.2.2"
requests = "^2.25.1"
urllib3 = "^1.26.4"
configparser = "^5.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
